<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#e8f4f8"
    tools:context=".SelectLocation"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_Header"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginBottom="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_Title"
        android:textSize="12dp"
        android:textColor="@color/black" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardLocation1"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/L1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Card1"
                android:textColor="@color/black">
            </TextView>

            <TextView

                android:id="@+id/L1_2"
                android:layout_below="@+id/L1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Location1"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_below="@+id/L1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Address1"
                android:textColor="@color/black">
            </TextView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardLocation2"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/L2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Card2"
                android:textColor="@color/black">
            </TextView>

            <TextView

                android:id="@+id/L2_2"
                android:layout_below="@+id/L2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Location2"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_below="@+id/L2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Address2"
                android:textColor="@color/black">
            </TextView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardLocation3"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/L3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Card3"
                android:textColor="@color/black">
            </TextView>

            <TextView

                android:id="@+id/L3_2"
                android:layout_below="@+id/L3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Location3"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_below="@+id/L3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Address3"
                android:textColor="@color/black">
            </TextView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardLocation4"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/L4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Card4"
                android:textColor="@color/black">
            </TextView>

            <TextView

                android:id="@+id/L4_2"
                android:layout_below="@+id/L4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Location4"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_below="@+id/L4_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/Address4"
                android:textColor="@color/black">
            </TextView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>



