<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e8f4f8"
    android:gravity="center"
    tools:context=".Profile">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvProfile"
        android:textSize="40dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/profileUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:layout_margin="20dp"/>


    <EditText
        android:id="@+id/profilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Contact"
        android:layout_margin="20dp" />

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_margin="20dp"
        android:enabled="false"/>

    <Button
        android:id="@+id/profileUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdateProfile"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/forgetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnChangePass"
        android:layout_margin="10dp"/>


</LinearLayout>